effects and product images"

--- a/help.html
+++ b/help.html
@@ -38,10 +38,49 @@
             background: #0D0D0D;
         }
 
+        .dot-pattern {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: radial-gradient(rgba(255, 255, 255, 0.06) 1.5px, transparent 1.5px);
+            background-size: 25px 25px;
+            pointer-events: none;
+            z-index: 9998;
+            transition: background-position 0.1s ease-out;
+        }
+
+        .cursor-glow {
+            position: fixed;
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(16, 185, 129, 0.08) 0%, transparent 60%);
+            pointer-events: none;
+            z-index: 9999;
+            transform: translate(-50%, -50%);
+            transition: opacity 0.3s ease;
+            opacity: 0;
+        }
+
+        body:hover .cursor-glow {
+            opacity: 1;
+        }
+
         .glass-card {
             background: rgba(26, 26, 26, 0.8);
             backdrop-filter: blur(10px);
             border: 1px solid #2A2A2A;
+        }
+
+        .tilt-card {
+            transform-style: preserve-3d;
+            perspective: 1000px;
+            transition: transform 0.1s ease-out;
+        }
+
+        .magnetic-btn {
+            transition: transform 0.2s ease-out;
         }
 
         .faq-item {
@@ -56,9 +95,15 @@
 
 <body class="font-sans text-text-primary antialiased">
 
+    <!-- Dot Pattern -->
+    <div class="dot-pattern" id="dot-pattern"></div>
+
+    <!-- Cursor Glow -->
+    <div class="cursor-glow" id="cursor-glow"></div>
+
     <!-- Navigation -->
-    <nav class="fixed top-0 left-0 right-0 z-50 glass-card border-t-0 border-l-0 border-r-0">
-        <div class="max-w-6xl mx-auto px-4">
+    <nav class="fixed top-4 left-4 right-4 z-50 glass-card rounded-2xl mx-auto max-w-6xl">
+        <div class="px-6">
             <div class="flex items-center justify-between h-16">
                 <a href="index.html" class="flex items-center gap-2">
                     <div
@@ -81,7 +126,7 @@
         </div>
     </nav>
 
-    <main class="pt-24 pb-16 px-4">
+    <main class="pt-28 pb-16 px-4">
         <div class="max-w-3xl mx-auto">
 
             <!-- Header -->
@@ -289,13 +334,13 @@
                 <p class="text-text-secondary mb-4">Have a question or need help? We're here for you.</p>
 
                 <div class="space-y-3">
-                    <a href="mailto:support@jobarmor.in"
+                    <a href="mailto:support@jobarmor.work"
                         class="flex items-center gap-3 p-3 rounded-lg bg-bg-primary hover:bg-border-color transition-colors">
                         <svg class="w-5 h-5 text-accent-success" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
-                        <span>support@jobarmor.in</span>
+                        <span>support@jobarmor.work</span>
                     </a>
 
                     <a href="https://twitter.com/jobarmor" target="_blank"
@@ -315,9 +360,27 @@
     <!-- Footer -->
     <footer class="py-8 px-4 border-t border-border-color">
         <div class="max-w-6xl mx-auto text-center">
-            <p class="text-text-muted text-sm">© 2024 JobArmor. All rights reserved.</p>
+            <p class="text-text-muted text-sm">© 2026 JobArmor. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        // Cursor Glow Trail
+        const cursorGlow = document.getElementById('cursor-glow');
+        document.addEventListener('mousemove', (e) => {
+            cursorGlow.style.left = e.clientX + 'px';
+            cursorGlow.style.top = e.clientY + 'px';
+        });
+
+        // Dot Pattern Parallax
+        const dotPattern = document.getElementById('dot-pattern');
+        document.addEventListener('mousemove', (e) => {
+            const x = (e.clientX / window.innerWidth - 0.5) * 20;
+            const y = (e.clientY / window.innerHeight - 0.5) * 20;
+            dotPattern.style.backgroundPosition = `${x}px ${y}px`;
+        });
+
+    </script>
 
 </body>
 
