floating image fix

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                             </li>
                             <li class="flex items-center gap-3 text-text-secondary">
                                 <div class="w-1.5 h-1.5 rounded-full bg-accent-success"></div>
-                                Glassdoor & Levels.fyi integration
+                                Glassdoor, ambitionbox & Levels.fyi integration
                             </li>
                             <li class="flex items-center gap-3 text-text-secondary">
                                 <div class="w-1.5 h-1.5 rounded-full bg-accent-success"></div>
@@ -610,7 +610,7 @@
                             class="absolute -inset-4 bg-accent-danger/20 rounded-[2rem] blur-3xl opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                         </div>
                         <img src="assets/showcase-2.png" alt="Scam Detection Showcase"
-                            class="showcase-img relative rounded-2xl border border-border-color shadow-2xl">
+                            class="showcase-img relative rounded-2xl border border-border-color shadow-2xl float-animation">
                     </div>
                 </div>
             </div>
