--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                             </li>
                             <li class="flex items-center gap-3 text-text-secondary">
                                 <div class="w-1.5 h-1.5 rounded-full bg-accent-success"></div>
-                                Glassdoor, ambitionbox & Levels.fyi integration
+                                Glassdoor, Ambitionbox & Levels.fyi integration
                             </li>
                             <li class="flex items-center gap-3 text-text-secondary">
                                 <div class="w-1.5 h-1.5 rounded-full bg-accent-success"></div>
