--- a/help.html
+++ b/help.html
@@ -275,48 +275,192 @@
                     Privacy Policy
                 </h2>
 
+                <p class="text-text-muted text-xs mb-6">Last Updated: January 21, 2026</p>
+
                 <div class="space-y-6 text-text-secondary text-sm">
+                    <!-- Overview -->
                     <div>
-                        <h3 class="font-medium text-text-primary mb-2">Data We Collect</h3>
+                        <h3 class="font-medium text-text-primary mb-2">Overview</h3>
+                        <p>JobArmor ("we," "our," or "the extension") is a browser extension that helps job seekers
+                            research companies, detect potential scam job postings, and prepare for interviews on
+                            LinkedIn. We are committed to protecting your privacy and being transparent about our data
+                            practices.</p>
+                    </div>
+
+                    <!-- Data Collection -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Data Collection</h3>
+
+                        <h4 class="font-medium text-text-primary text-xs mt-4 mb-2">What We Collect</h4>
+
+                        <p class="font-medium text-text-primary text-xs mb-1">Locally Stored Data (on your device only):
+                        </p>
+                        <ul class="list-disc list-inside space-y-1 mb-3">
+                            <li>Your Gemini API key (if using BYOK mode)</li>
+                            <li>Your selected AI model preference</li>
+                            <li>Cached research results (to reduce API calls)</li>
+                            <li>Your synced LinkedIn profile data (name, headline, skills, experience)</li>
+                            <li>Extension-generated UUID for subscription management</li>
+                        </ul>
+
+                        <p class="font-medium text-text-primary text-xs mb-1">Data Processed but Not Stored:</p>
                         <ul class="list-disc list-inside space-y-1">
-                            <li><strong>Extension UUID:</strong> A randomly generated identifier stored locally in your
-                                browser to identify your installation.</li>
-                            <li><strong>Email Address:</strong> Collected only during payment, used for subscription
-                                management and account recovery.</li>
-                            <li><strong>Usage Logs:</strong> Anonymized request counts for Pro users (for rate
-                                limiting).</li>
+                            <li>Job posting content (title, company, description, location)</li>
+                            <li>LinkedIn feed post content (for scam detection)</li>
+                            <li>Post author information (name, headline, verification status)</li>
                         </ul>
                     </div>
 
+                    <!-- What We Don't Collect -->
                     <div>
-                        <h3 class="font-medium text-text-primary mb-2">Data We Don't Collect</h3>
+                        <h3 class="font-medium text-text-primary mb-2">What We Do NOT Collect</h3>
                         <ul class="list-disc list-inside space-y-1">
-                            <li>Your browsing history</li>
-                            <li>Company research queries or results</li>
-                            <li>LinkedIn profile data</li>
-                            <li>Any personal information beyond email</li>
+                            <li>We do not collect your LinkedIn login credentials</li>
+                            <li>We do not track your browsing history</li>
+                            <li>We do not collect personal identification beyond what you voluntarily sync</li>
+                            <li>We do not use cookies or tracking pixels</li>
+                            <li>We do not collect data for advertising purposes</li>
                         </ul>
                     </div>
 
+                    <!-- How Data Is Used -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">How Your Data Is Used</h3>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-xs border border-border-color rounded-lg">
+                                <thead class="bg-bg-primary">
+                                    <tr>
+                                        <th class="px-3 py-2 text-left border-b border-border-color">Data</th>
+                                        <th class="px-3 py-2 text-left border-b border-border-color">Purpose</th>
+                                        <th class="px-3 py-2 text-left border-b border-border-color">Stored Where</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="px-3 py-2 border-b border-border-color">API Key</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Authenticate with Google
+                                            Gemini API</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Local device only</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-3 py-2 border-b border-border-color">Job posting text</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Sent to AI for analysis</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Processed, not permanently
+                                            stored</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-3 py-2 border-b border-border-color">Cached results</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Reduce redundant API calls
+                                        </td>
+                                        <td class="px-3 py-2 border-b border-border-color">Local device only</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-3 py-2 border-b border-border-color">Profile data</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Personalize referral messages
+                                            and job matching</td>
+                                        <td class="px-3 py-2 border-b border-border-color">Local device only</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="px-3 py-2">Extension UUID</td>
+                                        <td class="px-3 py-2">Manage premium subscription status</td>
+                                        <td class="px-3 py-2">Our servers (subscription users only)</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <!-- Third-Party Services -->
                     <div>
                         <h3 class="font-medium text-text-primary mb-2">Third-Party Services</h3>
+
+                        <h4 class="font-medium text-text-primary text-xs mt-3 mb-1">Google Gemini API (BYOK Mode)</h4>
+                        <p class="mb-3">When you use your own API key, job data is sent directly to Google's Generative
+                            AI API. This data is subject to <a href="https://policies.google.com/privacy"
+                                target="_blank" class="text-accent-success hover:underline">Google's Privacy Policy</a>
+                            and Gemini API Terms.</p>
+
+                        <h4 class="font-medium text-text-primary text-xs mb-1">Our Backend Services (Premium Users Only)
+                        </h4>
+                        <p class="mb-2">Premium subscribers' requests are routed through our Supabase-hosted backend. We
+                            process:</p>
                         <ul class="list-disc list-inside space-y-1">
-                            <li><strong>Google Gemini:</strong> AI processing (queries are not stored by us)</li>
-                            <li><strong>Razorpay:</strong> Payment processing (handled securely by Razorpay)</li>
-                            <li><strong>Supabase:</strong> Database and authentication</li>
+                            <li>Job posting content (for AI analysis)</li>
+                            <li>Extension UUID (for subscription validation)</li>
+                        </ul>
+                        <p class="mt-2">We do not store job posting content after processing is complete.</p>
+                    </div>
+
+                    <!-- Data Sharing -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Data Sharing</h3>
+                        <p class="mb-2">We do not sell, rent, or share your personal data with third parties for
+                            marketing purposes.</p>
+                        <p class="mb-1">Data is only shared with:</p>
+                        <ul class="list-disc list-inside space-y-1">
+                            <li><strong>Google Gemini API</strong> - For AI-powered analysis (when using BYOK mode)</li>
+                            <li><strong>Our API proxy</strong> - For premium users, to facilitate AI requests</li>
                         </ul>
                     </div>
 
+                    <!-- Data Retention -->
                     <div>
                         <h3 class="font-medium text-text-primary mb-2">Data Retention</h3>
-                        <p>Your data is retained as long as your account is active. Contact us to request data deletion.
-                        </p>
+                        <ul class="list-disc list-inside space-y-1">
+                            <li><strong>Local data:</strong> Stored until you uninstall the extension or clear browser
+                                data</li>
+                            <li><strong>Cached results:</strong> Automatically expire after 24 hours</li>
+                            <li><strong>Subscription records:</strong> Retained while your subscription is active</li>
+                        </ul>
                     </div>
 
+                    <!-- Your Rights -->
                     <div>
-                        <h3 class="font-medium text-text-primary mb-2">Security</h3>
-                        <p>We use industry-standard security practices including encrypted connections (HTTPS), secure
-                            API authentication, and Row Level Security in our database.</p>
+                        <h3 class="font-medium text-text-primary mb-2">Your Rights</h3>
+                        <p class="mb-2">You have the right to:</p>
+                        <ul class="list-disc list-inside space-y-1">
+                            <li><strong>Access:</strong> View all data stored locally via browser developer tools</li>
+                            <li><strong>Delete:</strong> Clear all extension data by uninstalling or clearing browser
+                                storage</li>
+                            <li><strong>Opt-out:</strong> Use the extension in BYOK mode without our backend services
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Data Security -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Data Security</h3>
+                        <ul class="list-disc list-inside space-y-1">
+                            <li>All API communications use HTTPS encryption</li>
+                            <li>API keys are stored locally and never transmitted to our servers</li>
+                            <li>We do not have access to your Gemini API key in BYOK mode</li>
+                        </ul>
+                    </div>
+
+                    <!-- Children's Privacy -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Children's Privacy</h3>
+                        <p>JobArmor is not intended for use by individuals under the age of 16. We do not knowingly
+                            collect data from children.</p>
+                    </div>
+
+                    <!-- Policy Changes -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Changes to This Policy</h3>
+                        <p>We may update this Privacy Policy from time to time. We will notify users of significant
+                            changes by updating the "Last Updated" date.</p>
+                    </div>
+
+                    <!-- Contact -->
+                    <div>
+                        <h3 class="font-medium text-text-primary mb-2">Contact Us</h3>
+                        <p class="mb-2">If you have questions about this Privacy Policy, contact us at:</p>
+                        <p><strong>Email:</strong> <a href="mailto:support@jobarmor.work"
+                                class="text-accent-success hover:underline">support@jobarmor.work</a></p>
+                        <p><strong>Website:</strong> <a href="https://www.jobarmor.work" target="_blank"
+                                class="text-accent-success hover:underline">https://www.jobarmor.work</a></p>
+                        <p class="mt-4 text-text-muted text-xs italic">This extension is not affiliated with or endorsed
+                            by LinkedIn Corporation.</p>
                     </div>
                 </div>
             </section>
@@ -343,14 +487,14 @@
                         <span>support@jobarmor.work</span>
                     </a>
 
-                    <a href="https://twitter.com/jobarmor" target="_blank"
+                    <!-- <a href="https://twitter.com/jobarmor" target="_blank"
                         class="flex items-center gap-3 p-3 rounded-lg bg-bg-primary hover:bg-border-color transition-colors">
                         <svg class="w-5 h-5 text-accent-success" fill="currentColor" viewBox="0 0 24 24">
                             <path
                                 d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
                         </svg>
                         <span>@jobarmor</span>
-                    </a>
+                    </a> -->
                 </div>
             </section>
 
