extension url updated

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </div>
 
                 <!-- CTA Button -->
-                <a href="https://chrome.google.com/webstore" target="_blank"
+                <a href="https://chromewebstore.google.com/detail/jobarmor-ai-career-assist/pcaccgjkeoaegkoibncgpmdbggbphmdb" target="_blank"
                     class="btn-primary px-4 py-2 rounded-lg text-sm font-medium text-white">
                     Install Extension
                 </a>
@@ -310,7 +310,7 @@
 
             <!-- CTA Buttons -->
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-                <a href="https://chrome.google.com/webstore" target="_blank"
+                <a href="https://chromewebstore.google.com/detail/jobarmor-ai-career-assist/pcaccgjkeoaegkoibncgpmdbggbphmdb" target="_blank"
                     class="btn-primary px-8 py-4 rounded-xl font-semibold text-white flex items-center gap-2">
                     <svg class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
                         <path
@@ -733,7 +733,7 @@
                         </li>
                     </ul>
 
-                    <a href="https://chrome.google.com/webstore" target="_blank"
+                    <a href="https://chromewebstore.google.com/detail/jobarmor-ai-career-assist/pcaccgjkeoaegkoibncgpmdbggbphmdb" target="_blank"
                         class="btn-secondary block w-full py-3 rounded-lg font-semibold text-center">
                         Get Started
                     </a>
